--- a/style.css
+++ b/style.css
@@ -18,3 +18,29 @@ body {
   background-color: #ccc;
 }
 /* End: Common Styles */
+
+/* Start: Menu */
+.menu {
+  width: 4rem;
+  height: 4rem;
+  background-color: red;
+  position: fixed;
+  top: 2rem;
+  left: 15vw;
+  z-index: 10;
+}
+/* End: Menu */
+
+/* Start: Navbar */
+.navbar {
+  width: 15vw;
+  height: 100vh;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 0 0 4rem;
+}
+/* End: Navbar */
