--- a/style.css
+++ b/style.css
@@ -42,5 +42,25 @@ body {
   display: flex;
   flex-direction: column;
   padding: 4rem 0 0 4rem;
+  z-index: 10;
 }
 /* End: Navbar */
+
+/* Start: Common Section Style */
+.wrapper {
+  width: 100%;
+  perspective: 50rem;
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+  background-color: #efefef;
+  position: relative;
+  left: 15vw;
+  margin-bottom: 3rem;
+  transform: rotateY(10deg);
+  transform-origin: left;
+  box-shadow: 0.5rem 0.5rem 1rem #aaa;
+}
+/* End: Common Section Style */
