--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   background-color: red;
   position: fixed;
   top: 2rem;
-  left: 15vw;
+  left: 2rem;
   z-index: 10;
 }
 /* End: Menu */
@@ -38,7 +38,7 @@ body {
   background-color: #fff;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -15vw;
   display: flex;
   flex-direction: column;
   padding: 4rem 0 0 4rem;
@@ -57,9 +57,9 @@ section {
   height: 100vh;
   background-color: #efefef;
   position: relative;
-  left: 15vw;
+  left: 0;
   margin-bottom: 3rem;
-  transform: rotateY(10deg);
+  /* transform: rotateY(10deg); */
   transform-origin: left;
   box-shadow: 0.5rem 0.5rem 1rem #aaa;
 }
