--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 
 body {
   background-color: #ccc;
+  padding-right: 3rem;
 }
 /* End: Common Styles */
 
@@ -28,6 +29,10 @@ body {
   top: 2rem;
   left: 2rem;
   z-index: 10;
+}
+
+.menu.change {
+  left: 15vw;
 }
 /* End: Menu */
 
@@ -44,6 +49,10 @@ body {
   padding: 4rem 0 0 4rem;
   z-index: 10;
 }
+
+.navbar.change {
+  left: 0;
+}
 /* End: Navbar */
 
 /* Start: Common Section Style */
@@ -59,8 +68,12 @@ section {
   position: relative;
   left: 0;
   margin-bottom: 3rem;
-  /* transform: rotateY(10deg); */
   transform-origin: left;
   box-shadow: 0.5rem 0.5rem 1rem #aaa;
+}
+
+section.change {
+  left: 15vw;
+  transform: rotateY(10deg);
 }
 /* End: Common Section Style */
