--- a/style.css
+++ b/style.css
@@ -25,16 +25,28 @@ body {
 .menu {
   width: 4rem;
   height: 4rem;
-  background-color: red;
   position: fixed;
   top: 2rem;
   left: 2rem;
   z-index: 10;
   transition: left 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .menu.change {
   left: 15vw;
+}
+
+.menu-line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: #fff;
+  margin: 0.3rem 0;
+  box-shadow: 0.1rem 0.1rem 0.3rem #222;
 }
 /* End: Menu */
 
