add animation to menu icon on click in style.css

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   top: 2rem;
   left: 2rem;
   z-index: 10;
-  transition: left 0.5s;
+  transition: all 0.5s;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,6 +39,7 @@ body {
 
 .menu.change {
   left: 15vw;
+  transform: rotate(45deg);
 }
 
 .menu-line {
@@ -47,6 +48,15 @@ body {
   background-color: #fff;
   margin: 0.3rem 0;
   box-shadow: 0.1rem 0.1rem 0.3rem #222;
+  transition: transform 0.5s;
+}
+
+.change .menu-line-1 {
+  transform: rotate(270deg) translateX(-0.4rem);
+}
+
+.change .menu-line-2 {
+  transform: rotate(360deg) translateY(-0.4rem);
 }
 /* End: Menu */
 
