--- a/style.css
+++ b/style.css
@@ -81,7 +81,16 @@ body {
 
 .navbar-link {
   font-size: 1.5rem;
+  font-weight: 600;
   margin: 2rem 0;
+  color: #777;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+  transition: color 0.3s;
+}
+
+.navbar-link:hover {
+  color: #111;
 }
 /* End: Navbar */
 
