--- a/style.css
+++ b/style.css
@@ -164,13 +164,52 @@ section.change {
   box-shadow: 0.6rem 0.6rem 0.6rem #bbb;
   /* transition: box-shadow 0.5s; */
   transition: all 0.5s;
+  position: relative;
 }
 
 .card:hover {
   box-shadow: 1rem 1rem 1rem #bbb;
 }
 
+.car-name {
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #fff;
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  z-index: 10;
+}
+
 .card-img {
   width: 100%;
+  opacity: 0.8;
+  transition: opacity 0.5s;
+}
+
+.card:hover .card-img {
+  opacity: 1;
+}
+
+.car-price {
+  font-size: 1.8rem;
+  color: #777;
+  margin: 0.5rem 0;
+}
+
+.card-btn {
+  width: 100%;
+  background-color: #fff;
+  font-size: 1.7rem;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 1rem;
+  padding: 0.5rem;
+  cursor: pointer;
+  color: #fff;
+  text-shadow: 0.1rem 0.1rem 0.3rem #000;
+  box-shadow: 0.1rem 0.1rem 0.5rem #bbb;
 }
 /* End: Section 2 Home */
