--- a/style.css
+++ b/style.css
@@ -224,5 +224,15 @@ section.change {
 
 .video {
   width: 25%;
+  margin: 0 2rem;
+  border-radius: 0.5rem;
+  opacity: 0.8;
+  box-shadow: 0.3rem 0.3rem 0.5rem #111;
+  transition: all 0.5s;
+}
+
+.video:hover {
+  opacity: 1;
+  box-shadow: 0.5rem 0.5rem 1rem #111;
 }
 /* End: Section 3 Video Gallery */
