--- a/style.css
+++ b/style.css
@@ -236,3 +236,41 @@ section.change {
   box-shadow: 0.5rem 0.5rem 1rem #111;
 }
 /* End: Section 3 Video Gallery */
+
+/* Start: Section 4 Image Gallery */
+.section-4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.gallery {
+  margin: 10rem 0;
+  perspective: 10rem;
+}
+
+.gallery-shelf {
+  width: 80%;
+  height: 3rem;
+  background-color: rgba(38, 126, 199, 0.8);
+  margin: auto;
+  position: relative;
+  box-shadow: 1rem 1rem 5rem #444;
+}
+
+.gallery-shelf::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 10rem;
+  background-color: rgba(34, 152, 248, 0.7);
+  top: -10rem;
+  transform: rotateX(20deg);
+  transform-origin: bottom;
+}
+
+.gallery img {
+  width: 15%;
+  display: none;
+}
+/* End: Section 4 Image Gallery */
