--- a/style.css
+++ b/style.css
@@ -271,6 +271,22 @@ section.change {
 
 .gallery img {
   width: 15%;
-  display: none;
+  position: absolute;
+  bottom: 6rem;
+  transform: translateX(-50%) rotateX(0.5deg);
+  box-shadow: 0.2rem -0.2rem 0.5rem #888;
+  border-radius: 0.5rem;
+}
+
+.gallery-img-1 {
+  left: 50%;
+}
+
+.gallery-img-2 {
+  left: 30%;
+}
+
+.gallery-img-3 {
+  left: 70%;
 }
 /* End: Section 4 Image Gallery */
