--- a/style.css
+++ b/style.css
@@ -274,8 +274,15 @@ section.change {
   position: absolute;
   bottom: 6rem;
   transform: translateX(-50%) rotateX(0.5deg);
+  transform-origin: bottom;
   box-shadow: 0.2rem -0.2rem 0.5rem #888;
   border-radius: 0.5rem;
+  transition: all 0.3s;
+}
+
+.gallery img:hover {
+  transform: translateX(-50%) rotateX(0);
+  box-shadow: 0 0.2rem 0.3rem #888;
 }
 
 .gallery-img-1 {
