add padding to section element in style.css file

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ section {
   width: 100%;
   height: 100vh;
   background-color: #efefef;
+  padding: 5rem 0;
   position: relative;
   left: 0;
   margin-bottom: 3rem;
