--- a/style.css
+++ b/style.css
@@ -309,4 +309,48 @@ section.change {
   justify-content: space-around;
   align-items: center;
 }
+
+.contact-form {
+  width: 60rem;
+  height: 45rem;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 2rem solid rgba(255, 255, 255, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5rem;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  height: 4rem;
+  margin: 2rem 0;
+  background-color: transparent;
+  padding: 0.5rem;
+  border: 0.1rem solid #fff;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  color: #fff;
+  flex-shrink: 0;
+  transition: background-color 0.5s;
+}
+
+.contact-form textarea {
+  max-width: 100%;
+  min-height: 8rem;
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.contact-form .form-btn {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-weight: 600;
+  letter-spacing: 0.3rem;
+  color: #444;
+  cursor: pointer;
+  text-transform: uppercase;
+}
 /* End: Section 5 Form + Footer */
