--- a/style.css
+++ b/style.css
@@ -361,5 +361,93 @@ section.change {
   color: #fff;
   text-align: center;
   letter-spacing: 0.1rem;
+  margin-top: 3rem;
 }
 /* End: Section 5 Form + Footer */
+
+/* Start: Media Queries */
+@media (max-width: 1500px) {
+  .navbar {
+    width: 20vw;
+    padding: 2rem 0 0 2rem;
+    left: -20vw;
+  }
+
+  .menu.change {
+    left: 20vw;
+  }
+
+  section.change {
+    left: 20vw;
+    transform: rotateY(15deg);
+  }
+
+  .section-heading {
+    font-size: 7rem;
+  }
+
+  .section-1 {
+    justify-content: space-evenly;
+  }
+
+  .section-2 {
+    height: auto;
+    padding: 5rem 0 10rem 0;
+  }
+
+  .cards-wrapper {
+    flex-wrap: wrap;
+  }
+
+  .card {
+    width: 40rem;
+    margin: 3rem;
+  }
+
+  .section-3 {
+    padding: 5rem 3rem;
+  }
+
+  .video {
+    width: 30%;
+    margin: 3rem;
+  }
+
+  .section-4 {
+    height: auto;
+  }
+
+  .gallery {
+    margin: 12rem 0;
+  }
+
+  .gallery-shelf {
+    width: 90%;
+  }
+
+  .gallery img {
+    width: 20%;
+  }
+
+  .gallery-img-2 {
+    left: 25%;
+  }
+  .gallery-img-3 {
+    left: 75%;
+  }
+
+  .section-5 {
+    height: auto;
+  }
+
+  .contact-form {
+    width: 55rem;
+    height: 40rem;
+    padding: 2rem;
+  }
+
+  .copyright {
+    margin-top: 5rem;
+  }
+}
+/* End: Media Queries */
