--- a/style.css
+++ b/style.css
@@ -450,4 +450,41 @@ section.change {
     margin-top: 5rem;
   }
 }
+
+@media (max-width: 1000px) {
+  body {
+    padding-right: 0;
+  }
+
+  .navbar {
+    width: 25vw;
+    left: -25vw;
+  }
+
+  .menu.change {
+    left: 25vw;
+  }
+
+  section.change {
+    left: 25vw;
+    transform: rotateY(20deg);
+  }
+
+  .section-1-img {
+    width: 90%;
+  }
+
+  .section-3 {
+    height: auto;
+  }
+
+  .video-wrapper {
+    flex-direction: column;
+  }
+
+  .video {
+    width: 70%;
+    margin: 3rem 0;
+  }
+}
 /* End: Media Queries */
