--- a/style.css
+++ b/style.css
@@ -535,4 +535,46 @@ section.change {
   }
 }
 
+@media (max-width: 600px) {
+  html {
+    font-size: 55.5%;
+  }
+
+  .section-heading {
+    font-size: 4.5rem;
+  }
+
+  .navbar {
+    width: 40vw;
+    left: -40vw;
+  }
+
+  .menu.change {
+    left: 40vw;
+  }
+
+  section.change {
+    left: 0;
+    transform: rotateY(0);
+  }
+
+  .section-1-img {
+    width: 100%;
+  }
+
+  .video {
+    width: 100%;
+    margin: 2rem 0;
+  }
+
+  .gallery {
+    margin: 9rem 0;
+  }
+
+  .contact-form {
+    width: 40rem;
+    border: 1rem solid rgba(255, 255, 255, 0.8);
+  }
+}
+
 /* End: Media Queries */
